# psemu

./: .gitignore  CMakeLists.txt  build.bat  cmbuild.bat  extract.py  lookup.py  make_header.py  nid_db.txt  run.bat
.github/workflows/: build.yml  main.yml
gpu/: CMakeLists.txt  README.md
gpu/adapter/: agc_bridge.cpp  init.cpp  screenshot.cpp  stubs.cpp  window_win32.cpp
gpu/src/graphics/host_gpu/: pageManager.cpp  regionDefinitions.h
gpu/src/graphics/host_gpu/renderer/: debug.cpp  descriptorCache.h  descriptors.cpp  framebufferCache.cpp  multiLevelPageTable.h  renderCompute.cpp  renderDraw.cpp  shaders.cpp  streamBuffer.h  textureCache.cpp  textureCache.h
gpu/src/graphics/presentation/: renderDoc.h  videoOut.cpp
gpu/src/graphics/presentation/window/: swapchain.cpp  vulkanWindow.cpp  windowInternal.h
gpu/src/graphics/shader/: shader.cpp  shaderVertexMetadata.cpp
gpu/src/graphics/shader/recompiler/: ResourceMaterialization.cpp
gpu/src/graphics/shader/recompiler/spirvEmitter/: spirvEmitterExport.cpp
gpu/src/kernel/: memory.cpp
gpu/src/libs/: agc.cpp  controller.cpp
include/: agc.h  core.h  elf64.h  linker.h  logger.h  nids.h  scanner.h  syscalls.h  video.h
scripts/: check_mod_start.py  disasm_eentry.py  disasm_ep.py  dump_ep.py  find_magics.py  find_plt_callers.py  parse_dyn.py  parse_sce_dyn.py  parse_segments.py  read_got.py  scratch.py  test_false_positives.py
src/: agc.cpp  core.cpp  linker.cpp  loader.cpp  logger.cpp  scanner.cpp  syscalls.cpp  video.cpp
